Issue #SB-23172 -  In Location popup,Select State & Select District text is not visible

--- a/src/app/client/src/assets/styles/themes.scss
+++ b/src/app/client/src/assets/styles/themes.scss
@@ -250,6 +250,9 @@ html[layout='joy'] {
   }
   .sbt-sticky-topbar.sb-fontresizecontainer{
     position: sticky;
+    @include respond-below(sm) {
+      position: initial;
+    }
   }
   .sbt-fluid-header-bg {
     display: block;
